Fixing alignment

--- a/_includes/css/general.css
+++ b/_includes/css/general.css
@@ -199,7 +199,6 @@ th {
 
 .reg .right {
   display: inline-block;
-  float: right;
 }
 
 .left {
@@ -210,7 +209,6 @@ th {
 
 .right {
   display: inline-block;
-  float: right;
   margin: 0;
 }
 
@@ -1166,7 +1164,6 @@ h2 {
 
 .right {
   display: inline-block;
-  float: right;
   margin: 0;
 }
 
